--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FB8C00" />
-    <script src="https://jsconsole.com/js/remote.js?965349ec-0d4c-4428-91ab-6e9ccfc99708"></script>
+    <script data-consolejs-channel="41f371f9-67cf-901a-c5b3-5b93437a9c16" src="https://remotejs.com/agent/agent.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
