fixed and ported loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>SatisGraphtory</title>
   </head>
-  <body>
+  <body style="background-color: #2D303D;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
