Make stripes into SVG

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta content="SatisGraphtory: A Graph Visualization Tool" name="Description">
+    <meta content="SatisGraphtory: A Graph Visualization Tool" name="Description">
     <meta name="theme-color" content="#FB8C00" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
