--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="SatisGraphtory: A Graph Visualization Tool" name="Description">
     <meta name="theme-color" content="#FB8C00" />
+    <script> window.prerenderReady = false; </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
