--- a/testingGCloud.html
+++ b/testingGCloud.html
@@ -66,11 +66,11 @@
     if (isSignedIn) {
       authorizeButton.style.display = 'none';
       signoutButton.style.display = 'block';
-      // listFiles();
+      listFiles();
       // createFolder();
       // createFile();
       // getFile()
-      patchFile();
+      // patchFile();
     } else {
       authorizeButton.style.display = 'block';
       signoutButton.style.display = 'none';
@@ -122,16 +122,21 @@
   function listFiles() {
     gapi.client.drive.files.list({
       'pageSize': 10,
-      'fields': "nextPageToken, files(id, name)"
+      'fields': "nextPageToken, files(id, name, trashed)"
     }).then(function(response) {
       appendPre('Files:');
       var files = response.result.files;
+      var numFiles =  0;
       if (files && files.length > 0) {
         for (var i = 0; i < files.length; i++) {
           var file = files[i];
+          if (file.trashed) continue;
+          numFiles++;
           appendPre(file.name + ' (' + file.id + ')');
         }
-      } else {
+      }
+
+      if (numFiles === 0) {
         appendPre('No files found.');
       }
     });
