--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <meta content="SatisGraphtory: A Graph Visualization Tool" name="Description">
     <meta name="theme-color" content="#FB8C00" />
     <script> window.prerenderReady = false; </script>
+    <script async defer src="https://apis.google.com/js/api.js"
+            onload="this.onload=function(){};"
+            onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
